# phytec-handheld-launcher

./: CLAUDE.md  README  README.md
app/: CMakeLists.txt  README.md  apps.h  input.c  input.h  launcher.c  launcher.h  lv_conf.h  main.c
src/: config.cpp  config.h  input.cpp  input.h  launcher.cpp  launcher.h  main.cpp  settings.cpp  settings.h  ui.cpp  ui.h
